--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/CastroM13/cota-serv#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsdom": "^21.1.0",
     "node-fetch": "^3.3.0"
