--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
   },
   "homepage": "https://github.com/CastroM13/cota-serv#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsdom": "^21.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.1.0",
     "node-fetch": "^3.3.0"
   }
 }
